tests/toylang/neg/001141_mutation.toylang
program a = { if var a : bool a then sleep; } .
